# wimse

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FEATURES.md  GOVERNANCE.md  LICENSE  README.md  ROADMAP.md  SECURITY.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: IMPLEMENTATION.md  INTEGRATION.md  README.md  THREAT-MODEL.md
docs/playbooks/: README.md  maintainer-compromise.md  vulnerability-response.md
src/: lib.rs
tests/: spiffe_id.rs
